--- a/week1-labs/assets/css/style.css
+++ b/week1-labs/assets/css/style.css
@@ -177,3 +177,33 @@ header h2 {
 .service-box img {
   width: 125px;
 }
+/*-------------------------------------Team Members Section */
+#team .section-text {
+  font-size: 1.9em;
+  text-align: center;
+}
+
+#team .member-name {
+  font-size: 1.5em;
+  font-weight: var(--fw-boldest);
+}
+
+#team img {
+  width: 250px;
+  height: 180px;
+}
+
+/*-------------------------------------Footer */
+.footer {
+  font-size: 1.9em;
+  text-align: center;
+}
+
+.address {
+  font-style: normal;
+  font-size: 0.8em;
+}
+
+.footer a {
+  color: var(--clr-blue);
+}
