--- a/week1-labs/assets/css/style.css
+++ b/week1-labs/assets/css/style.css
@@ -32,7 +32,7 @@
   box-sizing: border-box;
 }
 
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+/* Remove list styles on ul, ol elements with a list role */
 ul[role="list"],
 ol[role="list"],
 ul,
@@ -124,13 +124,18 @@ a {
 .nav-bar {
   background-color: var(--clr-darkBlue);
 }
+.nav-bar ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 .nav-bar a {
   color: var(--clr-textWhite);
   font-size: 2em;
 }
 
 /*-------------------------------------Header */
-header {
+.header {
   height: 650px;
 }
 
@@ -139,20 +144,52 @@ header {
     0 0 / cover no-repeat;
 }
 
+.header-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+header h1 {
+  color: var(--clr-textBlack);
+}
+
 header h2 {
   color: var(--clr-textWhite);
   text-shadow: #020819 8px -20px 9px;
 }
 
-.quote {
+.header-quote {
   font-size: 2.5em;
+  margin: 20px;
 }
 
-/*-------------------------------------Main Section */
+/*-------------------------------------General Information Section */
+#general-information {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.articles-wrapper {
+  display: flex;
+  max-width: 850px;
+  padding: 0 20px;
+  justify-content: center;
+}
+
+.articles-wrapper article {
+  flex: 0 1 calc(33.33% - 2rem);
+  text-align: center;
+  padding: 0.5em;
+  margin: 30px auto;
+}
+
 #general-information p {
   font-size: var(--fs-p);
-  text-align: center;
   font-weight: var(--fw-regulare);
+  text-align: center;
 }
 
 .link-btn {
@@ -161,26 +198,80 @@ header h2 {
   font-family: var(--ff-accent);
   font-size: 2em;
   letter-spacing: 0.25em;
-  text-align: center;
+  padding: 0.75em;
 }
 
 /*-------------------------------------Day Structure Section */
+.structure-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 650px;
+}
+
+.structure-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
 .service-box {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  text-align: center;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  flex: 0 1 calc(50% - 1.25em);
+  margin: 0.625em;
+  padding: 1.25em;
   font-size: 1.7em;
 }
 
 .service-box img {
   width: 125px;
 }
+
+.service-box p {
+  text-align: center;
+  padding: 20px;
+  margin-bottom: 40px;
+}
+
 /*-------------------------------------Team Members Section */
+.team-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
+}
+
+.team-wrapper {
+  max-width: 550px;
+}
+
 #team .section-text {
   font-size: 1.9em;
   text-align: center;
+}
+
+.member-container {
+  display: flex;
+  justify-content: center;
+}
+
+.member-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 850px;
+}
+
+.member-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
 }
 
 #team .member-name {
@@ -195,8 +286,15 @@ header h2 {
 
 /*-------------------------------------Footer */
 .footer {
+  display: flex;
+  justify-content: space-between;
   font-size: 1.9em;
   text-align: center;
+}
+
+.footer section {
+  flex: 1 1 50%;
+  margin: 20px;
 }
 
 .address {
@@ -204,6 +302,53 @@ header h2 {
   font-size: 0.8em;
 }
 
+.map-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
 .footer a {
   color: var(--clr-blue);
+}
+
+/*-------------------------------------Media Queries */
+@media screen and (max-width: 992px) {
+  .footer {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .articles-wrapper {
+    display: block;
+  }
+  .header-content h1 {
+    font-size: 7em;
+  }
+  .header-content h2 {
+    font-size: 4em;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .header h1 {
+    font-size: 5em;
+  }
+  .header h2 {
+    font-size: 3em;
+  }
+  .service-box {
+    flex: 100%;
+  }
+}
+
+@media only screen and (max-width: 460px) {
+  .header h1 {
+    font-size: 4em;
+  }
+  .header h2 {
+    font-size: 2em;
+  }
 }
